samples/_failures_safe/1761128446_84e2d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2cc56e8.c: In function ‘main’:
./samples/SAFE/__tmp_b2cc56e8.c:148:5: error: ‘print_comp’ undeclared (first use in this function)
  148 |     print_comp
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_b2cc56e8.c:148:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b2cc56e8.c:148:15: error: expected ‘;’ at end of input
  148 |     print_comp
      |               ^
      |               ;
./samples/SAFE/__tmp_b2cc56e8.c:148:5: error: expected declaration or statement at end of input
  148 |     print_comp
      |     ^~~~~~~~~~
